// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spySnapshotSerializer keeps other objects 1`] = `
Array [
  "str",
  5,
  Array [
    1,
    2,
    3,
  ],
  [Function],
]
`;

exports[`spySnapshotSerializer naked spy 1`] = `Array []`;

exports[`spySnapshotSerializer spied arrays 1`] = `
Array [
  Array [
    1,
    2,
    3,
  ],
  Array [
    4,
    5,
    6,
  ],
  Array [
    7,
    8,
    9,
  ],
]
`;

exports[`spySnapshotSerializer spied function 1`] = `
Object {
  "fun": [Function],
}
`;

exports[`spySnapshotSerializer spied objects 1`] = `
Object {
  "a": Object {
    "a": "a",
  },
  "b": Object {
    "b": "b",
  },
  "c": Object {
    "c": "c",
  },
}
`;

exports[`spySnapshotSerializer spied primitives 1`] = `
Array [
  true,
  1,
  "foo",
  Symbol(bar),
]
`;
